alignment fixed

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -152,6 +152,7 @@ main {
   border: 1px solid #dfe1e6;
   border-radius: 24px;
   margin: 0 auto;
+  width: 100%;
 }
 
 .card:hover {
